@@ -491,7 +491,7 @@ Argument MODULE specifies the emacspeak module that implements the speech-enabli
 
 ;;}}}
 ;;{{{ Setup package extensions
-
+(emacspeak-do-package-setup "analog" 'emacspeak-analog)
 (emacspeak-do-package-setup "ansi-color" 'emacspeak-ansi-color)                            
 (emacspeak-do-package-setup "arc-mode" 'emacspeak-arc)
 (emacspeak-do-package-setup "babel" 'emacspeak-babel )
